traces/bug_140.txt
examples++-load/gmsh.cpp:251: error: DEAD_STORE
  The value written to &num (type int) is never used.
Showing all 1 steps of the trace


examples++-load/gmsh.cpp:251:3: Write of unused value
249.   		if(fread(data, sizeof(int), n, fp) != n) exit(1);
250.   		if(swap) SwapBytes((char*)data, sizeof(int), n);
251.   		int num = data[0];
         ^
252.   		int physical = (numTags > 0) ? data[4 - numTags] : 0;
253.   		int elementary = (numTags > 1) ? data[4 - numTags + 1] : 0;
